# rrandr

./: .gitignore  Cargo.toml  README.md  build.rs  run_xscope.sh  rustfmt.toml
po/: de.po
res/: rrandr.gresource.xml  window.ui
rrandr/: Cargo.toml  build.rs
rrandr-config/: Cargo.toml
rrandr-config/src/: auto.rs  lib.rs
rrandr/po/: POTFILES.in  de.po
rrandr/src/: app.rs  draw.rs  hook.rs  main.rs  math.rs  window.rs
rrandr/src/data/: enums.rs  mod.rs  mode.rs  modes.rs  output.rs  outputs.rs  values.rs
rrandr/src/res/: dialog.ui  rrandr.desktop  rrandr.desktop.in  shortcuts.ui  window.ui
rrandr/src/widget/: checkbutton.rs  details_box.rs  details_child.rs  dialog.rs  disabled_output_area.rs  icon_text.rs  mod.rs  mode_selector.rs  output_area.rs  position_entry.rs  switch.rs
rrandr/src/x11/: popup.rs  randr.rs
rrandr_config/: Cargo.toml
rrandr_config/src/: auto.rs  color.rs  display.rs  font.rs  lib.rs  popup.rs
rrandr_config/src/data/: color.rs  enums.rs  mod.rs  weight.rs
rrandr_config_derive/: Cargo.toml
rrandr_config_derive/src/: lib.rs
src/: app.rs  cairo_surface.rs  color.rs  config.rs  data.rs  debug_draw.rs  dialog.rs  draw.rs  g_math.rs  gui.glade  main.rs  math.rs  output_view.rs  utils.rs  view.rs  widget.rs  window.rs
src/data/: mod.rs  mode.rs  modes.rs  output.rs  outputs.rs
src/data/mode/: imp.rs  mod.rs
src/data/modes/: imp.rs  mod.rs
src/data/output/: imp.rs  mod.rs
src/data/outputs/: imp.rs  mod.rs
src/details_child/: mod.rs
src/res/: rrandr.gresource.xml  shortcuts.ui  window.ui
src/widget/: checkbutton.rs  details_box.rs  dialog.rs  disabled_output_area.rs  icon_text.rs  mod.rs  mode_selector.rs  output_area.rs  position_entry.rs  switch.rs
src/widget/checkbutton/: imp.rs  mod.rs
src/widget/details_box/: imp.rs  mod.rs
src/widget/details_child/: imp.rs  mod.rs
src/widget/dialog/: imp.rs  mod.rs
src/widget/disabled_output_area/: imp.rs  mod.rs
src/widget/dropdown/: imp.rs  mod.rs
src/widget/entry/: imp.rs  mod.rs
src/widget/mode_selector/: imp.rs  mod.rs
src/widget/output_area/: imp.rs  mod.rs
src/widget/position_entry/: imp.rs  mod.rs
src/widget/switch/: imp.rs  mod.rs
src/widget/window/: imp.rs  mod.rs
src/x11/: mod.rs  popup.rs  randr.rs
